--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,6 @@
-Django==4.2.8
-django-cors-headers==4.3.1
-django-mdeditor==0.1.20
-django-ninja==1.1.0
-Pillow==10.1.0
-PyJWT==2.8.0
+Django
+django-cors-headers
+django-mdeditor
+django-ninja
+Pillow
+PyJWT
